[package]
name = "cbor-smol"
version = "0.5.1"
authors = ["Nicolas Stalder <n@stalder.io>", "The Trussed developers"]
edition = "2021"
description = "Streamlined serde serializer/deserializer for CBOR"
repository = "https://github.com/trussed-dev/cbor-smol"
readme = "README.md"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/cbor-smol"
keywords = ["CBOR", "serde"]
categories = ["development-tools", "embedded"]

[dependencies]
delog = { version = "0.1.0-alpha.3", optional = true }
heapless-bytes-v0-3 = { package = "heapless-bytes", version = "0.3", optional = true }
heapless-bytes-v0-4 = { package = "heapless-bytes", version = "0.4", optional = true }
heapless-bytes-v0-5 = { package = "heapless-bytes", version = "0.5", optional = true }
heapless-v0-7 = { package = "heapless", version = "0.7", optional = true }
heapless-v0-8 = { package = "heapless", version = "0.8", optional = true }
heapless-v0-9 = { package = "heapless", version = "0.9", optional = true }
serde_core = { version = "1", default-features = false }

[dev-dependencies]
heapless-v0-9 = { package = "heapless", version = "0.9", features = ["serde"] }
heapless-bytes-v0-5 = { package = "heapless-bytes", version = "0.5" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_bytes = "0.11.12"

[features]
default = ["delog"]
heapless-bytes-v0-3 = ["dep:heapless-bytes-v0-3", "heapless-v0-7"]
heapless-bytes-v0-4 = ["dep:heapless-bytes-v0-4"]
heapless-bytes-v0-5 = ["dep:heapless-bytes-v0-5", "heapless-v0-9"]
heapless-v0-7 = ["dep:heapless-v0-7"]
heapless-v0-8 = ["dep:heapless-v0-8"]
heapless-v0-9 = ["dep:heapless-v0-9"]

log-all = []
log-none = []
log-trace = []
log-info = []
log-debug = []
log-warn = []
log-error = []
